# trades_pipeline

./: README.md  pyproject.toml
deployment/dev/kind/: create_cluster.sh  install_kafka.sh  kafka-cluster.yaml  kind-with-portmapping.yaml
deployment/dev/kind/manifests/: kafka-e11b.yaml  kafka-ui-all-in-one.yaml
services/trades/: pyproject.toml
