[project]
name = "crypto-prediction"
version = "0.1.0"
description = "Real time crypto prediction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "quixstreams>=3.13.1",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = ["services/trades"]
